add env, setting java format, connect database

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ out/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/java-formatter.xml
 *.code-workspace
 
 ######################
