--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -1,15 +1,17 @@
-# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
 version: '3.8'
+
 services:
   jhipster_samples-postgresql:
-    image: postgres:14.5
-    # volumes:
-    #   - ~/volumes/jhipster/jhipster_samples/postgresql/:/var/lib/postgresql/data/
+    image: postgres:15.3-alpine
+    volumes:
+      - jhipster_samples-postgresql-db:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=jhipster_samples
-      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=${MYAPP_DATABASE_DB}
+      - POSTGRES_USER=${MYAPP_DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=${MYAPP_DATABASE_PASSWORD}
       - POSTGRES_HOST_AUTH_METHOD=trust
-    # If you want to expose these ports outside your dev PC,
-    # remove the "127.0.0.1:" prefix
     ports:
-      - 127.0.0.1:5432:5432
+      - 5432:5432
+
+volumes:
+  jhipster_samples-postgresql-db:
