--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -14,6 +14,11 @@
 # http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # ===================================================================
 
+myapp:
+  version:
+    name: 'now developping 1.2.3'
+    number: 123
+
 ---
 # Conditionally disable springdoc on missing api-docs profile
 spring:
